# pyQit

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
doc/tutorials/: barren_plateau.ipynb  vqc.ipynb
pyqit/: __init__.py  base.py  embeddings.py  measurements.py  utils.py
pyqit/ansatzes/: __init__.py  base.py  sel.py  vqc.py
pyqit/base/: __init__.py  base_object.py
pyqit/core/: __init__.py  _loss_mapping.py  config.py  embeddings.py  losses.py  measurements.py  pipeline.py  quantum_model.py  trainer.py
pyqit/core/adapters/: __init__.py  lightning.py
pyqit/core/callbacks/: __init__.py  history.py
pyqit/data/: __init__.py  datamodule.py
pyqit/models/: quantum_model.py  vqc.py
pyqit/models/base/: __init__.py  base.py  quantum_model.py
pyqit/models/classification/: classifier_mixin.py  vqc.py
pyqit/tests/: _fixture_generators.py  scenarios.py  test_all_anastz.py  test_all_embeddings.py  test_all_models.py
pyqit/utils/: diagnostic.py  utils.py
