[project]
name = "pyqit"
readme = "README.md"         # Markdown files are supported
version = "0.1.0b1"

authors = [
  {name = "Aryan Saini"},
]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
    # Lincense yet to decide
]
description = "A high-level orchestration and pipeline framework for quantum machine learning"

dependencies = [
  "pennylane <0.45.0",
  "numpy <3.0.0",
  "pandas >=1.3.0,<3.1.0",
  "scikit-learn >=1.2,<2.0",
  "scikit-base <0.14.0",
]

[project.optional-dependencies]
all_extras = [
  "torch !=2.0.1,>=2.11.0,<3.0.0",
  "lightning",
  "matplotlib",
  "rich"
]

pytorch = [
  "torch !=2.0.1,>=2.11.0,<3.0.0",
  "lightning",
]

dev = [
  "pydocstyle",
  # checks and make tools
  "pre-commit",
  "ruff",
  # pytest
  "pytest",
  "pytest-xdist",
  # jupyter notebook
  "ipykernel",
  "nbconvert",
  # documentatation
  "sphinx",
  "pydata-sphinx-theme",
  "nbsphinx",
  "recommonmark",
  "ipywidgets>=8.0.1,<9.0.0",
  "pytest-dotenv>=0.5.2,<1.0.0",
]

# docs - dependencies for building the documentation
docs = [
  "sphinx>3.2,<9.1.1",
  "pydata-sphinx-theme",
  "nbsphinx",
  "pandoc",
  "nbconvert",
  "recommonmark",
  "docutils",
]

github-actions = ["pytest-github-actions-annotate-failures"]

[tool.setuptools.packages.find]
exclude = ["build_tools"]
where = ["."]
include = ["pyqit*"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=70.0.0",
]

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
line-length = 88
exclude = [
  "node_modules/",
  "venv/",
  ".venv/",
  ".git/",
  ".history/",
]
target-version = "py310"

[tool.ruff.format]
# Enable formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "S"]
extend-select = [
  "I", # isort
  "UP", # pyupgrade
  "C4", # https://pypi.org/project/flake8-comprehensions
]
extend-ignore = [
  "E203", # space before : (needed for how black formats slicing)
  "E402", # module level import not at top of file
  "E731", # do not assign a lambda expression, use a def
  "E741", # ignore not easy to read variables like i l I etc.
  "C406", # Unnecessary list literal - rewrite as a dict literal.
  "C408", # Unnecessary dict call - rewrite as a literal.
  "C409", # Unnecessary list passed to tuple() - rewrite as a tuple literal.
  "F401", # unused imports
  "S101", # use of assert
  "UP038", # isinstance(x, (a, b)) is not allowed
]

[tool.ruff.lint.isort]
known-first-party = ["pyqit"]
combine-as-imports = true
force-sort-within-sections = true

[tool.nbqa.mutate]
ruff = 1
black = 1

[tool.ruff.lint.pydocstyle]
convention = "numpy"
